# src/routes/credentials/index.ts
@@ -1,7 +1,0 @@
-import { Router } from 'express';
-import { storeCredential } from './controller';
-import { authenticateRequest } from '../../middleware/authentication';
-
-export const credentialsRouter = Router();
-
-credentialsRouter.post('/', authenticateRequest, storeCredential);
